[package]
name = "aa"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = "3.0.0-beta.4"
hyper = { version="0.14.12", features=["http2", "stream"] }
hyper-rustls = "0.22.1"
jsonpath_lib = "0.3.0"
lazy_static = "1.4.0"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde_yaml = "0.8.20"
tokio = { version = "1.11.0", features = ["full"] }
tokio-util = "0.6.8"
walkdir = "2.3.2"
